# Bench

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
builtin/: README.md  THIRD_PARTY_NOTICES.md  catalog.json
builtin/candidates/a3s-code/: run.sh  runtime.acl
builtin/provenance/: edgebench.json
builtin/tasks/ad_placement_optimization/: task.acl
builtin/tasks/anchorhead_text_adventure/: task.acl
builtin/tasks/ann_vector_search_qps/: task.acl
builtin/tasks/apple_incremental_game/: task.acl
builtin/tasks/arc_compiler_runtime/: task.acl
builtin/tasks/bipedalwalker_locomotion_rl/: task.acl
builtin/tasks/borden_source_inversion/: task.acl
builtin/tasks/carleson_formalization/: task.acl
builtin/tasks/college_english_exam_bank/: task.acl
builtin/tasks/combinatorial_games_formalization/: task.acl
builtin/tasks/cta_risk_budget_optimization/: task.acl
builtin/tasks/dabic_gravity_inversion/: task.acl
builtin/tasks/dcss_dungeon_ai/: task.acl
builtin/tasks/equivalence_class_divide_and_conquer/: task.acl
builtin/tasks/exchange_core_throughput/: task.acl
builtin/tasks/ffmpeg_swscale_reimplementation/: task.acl
builtin/tasks/flt_regular_formalization/: task.acl
builtin/tasks/git_rewrite_in_zig/: task.acl
builtin/tasks/graph_node_classification/: task.acl
builtin/tasks/grid_turing_robot/: task.acl
builtin/tasks/integer_compression_codec/: task.acl
builtin/tasks/jagua_nesting_optimization/: task.acl
builtin/tasks/juliet_vulnerability_analyzer/: task.acl
builtin/tasks/k12_math_recommendation/: task.acl
docs/: agent-assets.md  candidate-adapters.md  design.md  task-spec-acl.md
examples/a3s-box-pnpm/: README.md  task.acl
examples/executable-candidate/: run.sh
examples/smoke/: README.md  task.acl
examples/smoke-candidate/: Dockerfile  agent.md  run.sh
examples/smoke-oci-judge/: task.acl
runtime_assets/: game_server_app.py
src/: acl_schema.rs  asset.rs  bench_run.rs  catalog.rs  cli.rs  config.rs  game_judge.rs  judge_source.rs  legacy_judge.rs  lock.rs  lock_identity.rs  main.rs  model_candidate.rs  oci_asset.rs  os_runtime.rs  output.rs  result_identity.rs  result_record.rs  run_input.rs  run_journal.rs  runtime.rs  runtime_profile.rs  runtime_selection.rs  state_fs.rs  submission.rs  task.rs  task_snapshot.rs  workspace.rs
src/bench_run/: tests.rs
src/lock/: tests.rs
src/os_runtime/: auth.rs  scripts.rs
src/run_input/: tests.rs
src/task_snapshot/: tests.rs
tools/: check_builtins.py  import_edgebench.py  package_component.py  smoke_imported.sh  smoke_local.sh
(+244 files in other folders)
