[package]
name = "a3s-bench"
version = "0.1.1"
edition = "2021"
description = "Reproducible evaluation of coding agents and automated systems"
license = "MIT"
repository = "https://github.com/A3S-Lab/Bench"

[[bin]]
name = "a3s-bench"
path = "src/main.rs"

[dependencies]
a3s-acl = { git = "https://github.com/A3S-Lab/ACL.git", rev = "4ce7a505958a66c5c27b72d5a2af7efc0e401f17" }
a3s-code-core = "=5.3.4"
a3s-runtime = { git = "https://github.com/A3S-Lab/Runtime.git", rev = "c77ea234c0f88578dc2b7887b7070a6bdea7e07b" }
anyhow = "1"
async-trait = "0.1"
base64 = "0.22"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
regex = "1"
globset = "0.4"
tokio = { version = "1", features = ["rt-multi-thread", "process", "time"] }

[dev-dependencies]
tempfile = "3"

[profile.release]
opt-level = "z"
lto = true
strip = true
